--- a/css/style.css
+++ b/css/style.css
@@ -228,3 +228,103 @@ section .heading h2
 {
     color: #097F53;
 }
+
+/* EDUCATION */
+#education
+{
+    background: white;
+}
+#education .heading h2
+{
+    color: #097F53;
+}
+.education-block
+{
+    width:90%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 30px;
+    background: #ddd;
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    margin-bottom: 20px;
+}
+.education-block h5
+{
+    color: #888;
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+.education-block .glyphicon
+{
+    font-size: 40px;
+}
+.education-block h3
+{
+    color: #097F53;
+}
+.education-block h4
+{
+    margin-bottom: 20px;
+}
+.education-block p
+{
+    font-weight: bold;
+}
+.education-block .green-divider
+{
+    margin-bottom: 20px;
+}
+
+
+/* PORTFOLIO */
+
+#portfolio
+{
+    background: #097F53;
+}
+#portfolio .heading h2
+{
+    color: white;
+    margin-bottom: 100px;
+}
+#portfolio .thumbnail img
+{
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+}
+#portfolio .thumbnail img:hover
+{
+    filter: none;
+    -webkit-filter: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
