--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,47 @@ section .heading h2
 {
     text-transform: uppercase;
 }
+
+/* MENU */
+.navbar
+{
+    background: #097F53;
+    font-size: 12px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.navbar .navbar-nav
+{
+    display: inline-block;
+    float: none;
+    vertical-align: top;
+}
+.navbar .navbar-collapse
+{
+    text-align: center;
+}
+.navbar li a
+{
+    color: #fff !important; 
+}
+.navbar-nav li a:hover, .navbar-nav li.active a
+{
+    color: #097F53 !important;
+    background-color: white !important;
+}
+.navbar-default .navbar-toggle
+{
+    border-style: none;
+}
+.icon-bar
+{
+   background-color: white !important; 
+}
+
+
+
+
 /* ABOUT */
 
 #about
@@ -302,12 +343,68 @@ section .heading h2
 }
 
 
+/* INSPIRATIONS */
 
+#inspirations
+{
+    background: #fff;
+}
+#recommandation .heading h2
+{
+    color: #097F53;
+}
+.carousel-control.left, .carousel-control.right
+{
+    background-image: none;
+    color: #097F53;
+}
+.carousel-indicators
+{
+    bottom: 0px;
+}
+.carousel-indicators li
+{
+    border-color: #097F53;
+}
+.carousel-indicators li.active
+{
+    background-color: #097F53;
+}
+#myCarousel .item
+{
+    padding: 40px 30px;
+}
+#myCarousel .item h3
+{
+    color: #097F53;
+    font-style: italic;
+}
 
-
-
-
-
+/* FOOTER */
+footer
+{
+    background: #333;
+    padding: 20px 0 40px;
+}
+footer .glyphicon
+{
+    font-size: 25px;
+    margin: 20px;
+    color: #097F53;
+    height: 30px;
+}
+footer .glyphicon:hover
+{
+    font-size: 28px;
+    margin: 20px;
+    color: #097F53;
+    height: 30px;
+}
+footer h5
+{
+    color: white;
+    font-weight: normal;
+}
 
 
 
